julia-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"kompose.cmd":"kompose convert -f docker-compose.yml","kompose.version":"1.28.0 (HEAD)"},"creationTimestamp":null,"labels":{"io.kompose.service":"julia-app"},"name":"julia-app","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"io.kompose.service":"julia-app"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"annotations":{"kompose.cmd":"kompose convert -f docker-compose.yml","kompose.version [...]
  creationTimestamp: "2023-08-13T09:08:00Z"
  generation: 4
  labels:
    io.kompose.service: julia-app
  name: julia-app
  namespace: default
  resourceVersion: "36756"
  uid: 038efb9b-98ae-4d41-b64e-50cab144e70b
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: julia-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
        kubectl.kubernetes.io/restartedAt: "2023-08-13T12:12:10+02:00"
      creationTimestamp: null
      labels:
        io.kompose.network/probker-default: "true"
        io.kompose.service: julia-app
    spec:
      containers:
      - image: gcr.io/probker-cloud-run/julia-app:1.0
        imagePullPolicy: Always
        name: julia-app
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app
          name: julia-app-claim0
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: julia-app-claim0
        persistentVolumeClaim:
          claimName: julia-app-claim0
status:
  conditions:
  - lastTransitionTime: "2023-08-13T10:03:35Z"
    lastUpdateTime: "2023-08-13T10:03:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-08-13T10:03:02Z"
    lastUpdateTime: "2023-08-13T10:12:10Z"
    message: ReplicaSet "julia-app-74974b74f4" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
